2010-03-23  David Hyatt  <hyatt@apple.com>

        Reviewed by Jeremy Orlow.

        https://bugs.webkit.org/show_bug.cgi?id=36277, make sure nth-child supports the positive unary prefix (+) as well as the negative
        one (-).

        Added fast/css/nth-child-unary-prefix.html

        * css/tokenizer.flex:

2010-03-23  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Dmitry Titov.

        Change notification sent to inspector frontend on workers creation / destruction
        to be posted asynchronously to avoid JS reenterability problems. Also, renamed
        willDestroyWorker to didDestroyWorker to reflect that it gets called later and got
        rid of explicit IDs for workers (use addresses instead).
        https://bugs.webkit.org/show_bug.cgi?id=36213

        * inspector/InjectedScriptHost.cpp:
        (WebCore::InjectedScriptHost::didDestroyWorker):
        * inspector/InjectedScriptHost.h:
        * inspector/InjectedScriptHost.idl:
        * inspector/InspectorController.cpp:
        (WebCore::PostWorkerNotificationToFrontendTask::create):
        (WebCore::PostWorkerNotificationToFrontendTask::PostWorkerNotificationToFrontendTask):
        (WebCore::PostWorkerNotificationToFrontendTask::performTask):
        (WebCore::InspectorController::postWorkerNotificationToFrontend):
        (WebCore::InspectorController::didCreateWorker):
        (WebCore::InspectorController::didDestroyWorker):
        * inspector/InspectorController.h:
        (WebCore::InspectorController::):
        * inspector/InspectorFrontend.cpp:
        (WebCore::InspectorFrontend::didDestroyWorker):
        * inspector/InspectorFrontend.h:
        * inspector/InspectorWorkerResource.h:
        (WebCore::InspectorWorkerResource::create):
        (WebCore::InspectorWorkerResource::id):
        (WebCore::InspectorWorkerResource::InspectorWorkerResource):
        * inspector/front-end/InjectedFakeWorker.js:
        (InjectedFakeWorker.FakeWorker.prototype.terminate):