@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2004, 2006, 2007, 2008, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2004, 2006, 2007, 2008, 2009, 2010 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,10 +28,9 @@
 
 #if PLATFORM(IPHONE)
 
-#import "KeyEventCodesIPhone.h"
+#import "KeyEventCocoa.h"
 #import "Logging.h"
 #import "WebEvent.h"
-#import <wtf/ASCIICType.h>
 
 using namespace WTF;
 
